--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <%- include('partials/_header.ejs') %>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -16,7 +17,9 @@
     />
     <title>TinyApp</title>
   </head>
+  
   <body>
+      
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
