--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -24,16 +24,25 @@
       <h3>My URLs</h3>
       <table class="table">
         <thead>
-          <tr>
-            <th scope="col">Short URL ID</th>
-            <th scope="col">Long URL</th>
+          <tr>  
+            <th scope="col">Short URL ID </th>
+            <th scope="col">Long URL  </th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
+          
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td>
+                <form method="POST" action="/urls/<%= id %>/delete">
+                  <button type="submit" style="color: red ; border-color: red ; background-color: white;">
+                    Delete
+                  </button>
+                </form>
+              </td>
             </tr>
           <% } %>
         </tbody>
