--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,7 +16,24 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        </div>
+        </div> 
       </div>
-    </nav>
-  </header>
+
+      <% if(!username) { %>
+        
+        <div class="login-container">
+          <form action="/login" method="post">
+            <input type="text" placeholder="Username" name="username">
+            <button type="submit">Login</button>
+          </form>
+        </div>
+      <% } else { %>
+        <div>Logged in as <%= username%></div>
+        <div class="logout-container">
+          <form action="/logout" method="post">
+            <button type="submit">Logout</button>
+          </form>
+        </div>
+      <% } %>
+      </nav>
+    </header>
