--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,6 +27,7 @@
           <tr>  
             <th scope="col">Short URL ID </th>
             <th scope="col">Long URL  </th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
@@ -36,6 +37,13 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td>
+                <form method="GET" action="/urls/<%= id %>">
+                  <button type="submit" style="color: rgb(32, 38, 233) ; border-color: rgb(51, 0, 255) ; background-color: white;">
+                    Edit
+                  </button>
+                </form>
+              </td>
               <td>
                 <form method="POST" action="/urls/<%= id %>/delete">
                   <button type="submit" style="color: red ; border-color: red ; background-color: white;">
