--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
@@ -22,8 +23,14 @@
         </p>
       </div>
       <div class="card-footer text-muted"></div>
+      <form action="/urls/<%= id %>/edit" method="post">
+        <h2>Edit</h2>
+        <label for="url">New Url: </label>
+        <input type ="text" name="url">
+        <button type="submit">Submit</button>
+      </form>
     </div>
-    <!-- Bootstrap JS -->
+    <!-- Bootstrap JS --> 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
