--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,39 +1,32 @@
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-success">
-      <a class="navbar-brand" href="/urls">TinyApp</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/urls">My URLs</a>
-          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        </div> 
+  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+    <a class="navbar-brand" href="/urls">TinyApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle nagivation">
+      <span class="navbar-toggler-icon"></span>
+   
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="/urls">My URLs</a>
+        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-
-      <% if(!username) { %>
+    </div>
+    <% if(!user) { %>
         
-        <div class="login-container">
-          <form action="/login" method="post">
-            <input type="text" placeholder="Username" name="username">
-            <button type="submit">Login</button>
-          </form>
-        </div>
-      <% } else { %>
-        <div>Logged in as <%= username%></div>
-        <div class="logout-container">
-          <form action="/logout" method="post">
-            <button type="submit">Logout</button>
-          </form>
-        </div>
-      <% } %>
-      </nav>
-    </header>
+      <div class="login-container">
+        <form action="/login" method="post">
+          <input type="text" placeholder="Username" name="username">
+          <button type="submit">Login</button>
+          <!-- <button  href="/register" >Register</button> -->
+        </form>
+      </div>
+    <% } else { %>
+      <div>Logged in as <%= user%></div>
+      <div class="logout-container">
+        <form action="/logout" method="post">
+          <button type="submit">Logout</button>
+        </form>
+      </div>
+    <% } %>
+  </nav>
+</header>
