--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -2,25 +2,7 @@
 <html lang="en">
   <head>
     
-    <nav class="navbar navbar-expand-md navbar-dark bg-success">
-        <a class="navbar-brand" href="/urls">TinyApp</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/urls">My URLs</a>
-            <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-          </div> 
-        </div>
+   
         
     <!-- Bootstrap CSS -->
     <link
@@ -29,12 +11,14 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <title>URL - TinyApp Example</title>
+    
     <title>Registration</title>
-    </nav>
+    
   </head>
 
   <body>
+    <%- include('partials/_header.ejs') %>
+
     <main style="margin: 1em;">
       <h3>Create an Account</h3>
       <form action="/register" method="POST">
