User database updated , related end points updated

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -36,7 +36,7 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><%= urls[id].longURL %></td>
               <td>
                 <form method="GET" action="/urls/<%= id %>">
                   <button type="submit" style="color: rgb(32, 38, 233) ; border-color: rgb(51, 0, 255) ; background-color: white;">
