--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -22,10 +22,10 @@
         <a class="btn" href="/register">Register</a>
       </div>
     <% } else { %>
-      <div>Logged in as <%= email%></div>
-      <div class="logout-container">
+      <div>Logged in as : <%= email%></div>
+      <div class="logout-container ml-3 ">
         <form action="/logout" method="post">
-          <button type="submit">Logout</button>
+          <button class="btn btn-secondary" type="submit">Logout</button>
         </form>
       </div>
     <% } %>
