--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -26,7 +26,7 @@
       <form action="/urls/<%= id %>/edit" method="post">
         <h2>Edit</h2>
         <label for="url">New Url: </label>
-        <input type ="text" name="url">
+        <input type ="text" name="longURL">
         <button type="submit">Submit</button>
       </form>
     </div>
